cargo-features = ["strip"]

[package]
name = "browsah"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.0"
clap = {version = "3.0.0-rc.7", features = ["derive", "std"], default-features = false}
reqwest = {version = "0.11.7", features = ["blocking"]}
url = {version = "2.2.2"}
image = {version = "0.23.14", default-features = false, features = ["png"]}
fontdue = "0.6.2"
lazy_static = "1.4.0"

[profile.release]
strip = true
lto = true
