[workspace]
members = [
    "css"
]

[package]
name = "browsah"
version = "0.1.0"
edition = "2021"

[dependencies]
pico-args = {version = "0.4.2"}
ureq = "2.4.0"
url = "2.2.2"
image = { version = "0.23.14", default-features = false, features = ["png"] }
fontdue = "0.6.2"
tracing = "0.1.29"
# tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
tracing-subscriber = {version = "0.3.5"}
css = {path = "css"}
html = {path = "html"}
once_cell = "1.12.0"

[profile.release]
debug = true
